[package]
name = "cranberry"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = "0.26.1"
crossterm = "0.27.0"
tui-textarea = "0.4.0"
stblib = { path = "/home/julian/Projekte/stblib-rust", features = ["stbchat-sync"] }
tokio = { version = "1.36.0", features = ["full"] }
ansi-to-tui = "4.0.0"

[profile.release]
opt-level = 'z'
strip = true
lto = true
panic = "abort"

[profile.dev]
panic = "abort"
