[package]
name = "cranberry"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = "0.29.0"
crossterm = "0.28.1"
tui-textarea = "0.7.0"
stblib = { version = "0.7.0", features = ["stbchat-sync"] }
tokio = { version = "1.43.0", features = ["full"] }
ansi-to-tui = "7.0.0"

[profile.release]
opt-level = 'z'
strip = true
lto = true
panic = "abort"

[profile.dev]
panic = "abort"
